Fixed collapsed nav bar, additional styling changes.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -67,8 +67,6 @@ img {
 	margin: 0 auto;
 }
 
-
-
 p {
 	font-size: 1.5em;
 }
@@ -108,6 +106,10 @@ footer p {
 	margin: 12px 0;
 }
 
+.social {
+	padding: 20px;
+}
+
 /*.navbar-default {
 	text-transform: uppercase;
 	background-color: #2c3e50;
@@ -130,6 +132,10 @@ footer p {
 .navbar-default {
 	background-color: #2c3e50;
 	border-color: transparent;
+}
+
+.navbar-default .navbar-collapse {
+	border-color: #405060;
 }
 
 .navbar-default .navbar-brand, 
